tests/fixtures/errors/arith_arg_mismatch.z
# A declared operator method arg-checks its right operand against the method's
# parameter: i64's `+` expects an i64, so `1 + true` is an argument-type
# mismatch (the literal materialises to i64 for dispatch).
main: function is {
    t: true
    x: 1 + t
    print "\{x}"
}
